FISH-8652: Use charset in PhoneHomeParameterCreator.