@@ -16,10 +16,13 @@
 
 package com.hazelcast.internal.util.phonehome;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
+
+import static com.hazelcast.internal.util.ExceptionUtil.rethrow;
 
 /**
  * Util class for parameters of OS and EE PhoneHome pings.
@@ -55,7 +58,11 @@ public class PhoneHomeParameterCreator {
         } else {
             hasParameterBefore = true;
         }
-        builder.append(key).append("=").append(URLEncoder.encode(value, StandardCharsets.UTF_8));
+        try {
+            builder.append(key).append("=").append(URLEncoder.encode(value, StandardCharsets.UTF_8.name()));
+        } catch (UnsupportedEncodingException e) {
+            throw rethrow(e);
+        }
         parameters.put(key, value);
     }
 
